# thesis-player

./: .gitignore  CMakeLists.txt
common/: typedefs.hpp
src/: main.cpp
